<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Radio</string>

    <string name="radio_name">Name of station</string>
    <string name="url">URL</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="deleteRadioConfirm">Delete this station?</string>
    <string name="addRadio">Add radio</string>
    <string name="ok">OK</string>
    <string name="errorInvalidURL">Invalid URL</string>

    <string name="action_music">Music</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <!-- nav header activity main -->
    <string name="by">Old Geek, 2017</string>

    <string name="update">Update</string>

    <string name="about">About</string>

    <string name="exit">Exit</string>

    <string name="add_logo">Touch to add a logo</string>


    <!-- notification -->
    <string name="station_name">Station name</string>
    <string name="notif_touch">(Tap to open)</string>


    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="disconnected">Disconnected</string>
    <string name="completed">Completed</string>

    <string name="about_message">

        \n
        Radio 2.12.3, Web-Radio for Android\n
        Copyright &#169; 2017  Old-Geek\n
        \n
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n
        \n
        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
        GNU General Public License for more details.\n
        \n
        You should have received a copy of the GNU General Public License
        along with this program.  If not, see http://www.gnu.org/licenses\n
        \n
        Code: https://github.com/Old-Geek/Radio2\n
        \n
        Picasso: A powerful image downloading and caching library for Android\n
        Licensed under the Apache License, Version 2.0\n
        https://github.com/square/picasso\n
        \n
        <b>OkHttp:</b> An HTTP and HTTP/2 client for Android and Java applications.\n
        Licensed under the Apache License, Version 2.0\n
        https://github.com/square/okhttp\n
        \n
        http://www.apache.org/licenses/LICENSE-2.0 \n
    </string>


    <!-- Timer -->
    <string name="timer_info" formatted="false" tools:ignore="StringFormatInvalid">%02d:%02d</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="continuer">Continue</string>
    <string name="cancel_timer">Cancel timer</string>
    <string name="impossible">0 impossible</string>


    <!-- update -->
    <string name="appupdater_update_available">Update available</string>

    <string name="appupdater_update_available_description_dialog">New version %1$s available. You will get new features %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">New version %1$s available.\n\nNEW:\n%2$s</string>
    <string name="appupdater_update_available_description_snackbar">New version %1$s available.</string>
    <string name="appupdater_update_not_available">No update available</string>
    <string name="appupdater_update_not_available_description">This is already the latest version of %s.</string>
    <string name="appupdater_btn_update">Update</string>
    <string name="appupdater_btn_dismiss">Later</string>

    <!-- import/export DB -->
    <string name="importer_erreur">Import error</string>

    <string name="exporter">Export successful</string>

    <string name="importerMenu">Import station list</string>
    <string name="exporterMenu">Export station list</string>
    <string name="select_file">Select file</string>

    <!-- permission -->
    <string name="permission">Permission request</string>
    <string name="permission_write_external_storage">Permission to write external storage</string>


    <string-array name="size_units">
        <item>o</item>
        <item>Ko</item>
        <item>Mo</item>
        <item>Go</item>
        <item>To</item>
        <item>Po</item>
    </string-array>

    <string name="empty_directory">Empty directory</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect">Deselect</string>
    <string name="action_invert_selection">Invert selection</string>
    <string name="new_folder">New folder</string>
    <string name="folder_created">Folder created</string>
    <string name="folder_not_created">Error! Folder not created</string>
    <string name="folder_already_exists">Folder already exists</string>
    <string name="sort">Sort</string>

    <string-array name="sorting_types">
        <item>Name, ascending</item>
        <item>Name, descending</item>
        <item>Size, ascending</item>
        <item>Size, descending</item>
        <item>Date, ascending</item>
        <item>Date, descending</item>
    </string-array>


    <string name="folder_name_hint">Folder name</string>

    <string name="addRadio_fromApp">Radio %1$s added</string>
    <string name="addRadio_error">This radio is already registered</string>
    <string name="add_mpd">Send tot MPD Remote</string>
    <string name="add_radio_browse">Browse</string>
    <string name="add_radio_manual">Add manually</string>
    <string name="addRadio_error_url">The address of this radio is incorrect</string>
    <string name="error_connexion">Connection problem</string>
    <string name="search">Search</string>


</resources>
