<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/action_export"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/exporterMenu"/>

        <item
            android:id="@+id/action_import"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/importerMenu"/>

    </group>

    <group>

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_menu_update"
            android:title="@string/update" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/exit" />

    </group>
</menu>