<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="48dp" >
        
        <ImageButton
            android:id="@+id/menu_cancel1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@android:string/cancel"
            android:scaleType="center"
            android:src="@drawable/ic_action_cancel" />

<!--        <ImageView
            android:id="@+id/menu_updir"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/menu_cancel1"
            android:layout_toRightOf="@+id/title"
            android:background="@drawable/ic_updir"
            android:src="@drawable/ic_updir"
            android:visibility="gone"/>-->

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/menu_sort1"
            android:layout_toRightOf="@+id/menu_cancel1"
            android:ellipsize="end"
            android:text="Test"
            android:textSize="17sp"
            android:textStyle="bold"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/menu_sort1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/menu_new_folder"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sort"
            android:scaleType="center"
            android:src="@drawable/ic_action_sort" />

        <ImageButton
            android:id="@+id/menu_ok1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@android:string/ok"
            android:scaleType="center"
            android:src="@drawable/ic_action_ok" />

        <View
            android:id="@+id/ok1_delimiter"
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/menu_ok1"
            android:background="@color/grey_800" />

        <ImageButton
            android:id="@+id/menu_new_folder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toLeftOf="@+id/ok1_delimiter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_action_new_folder" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/menu_cancel2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@android:string/cancel"
            android:scaleType="center"
            android:src="@drawable/ic_action_cancel" />

        <ImageButton
            android:id="@+id/menu_ok2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@android:string/ok"
            android:scaleType="center"
            android:src="@drawable/ic_action_ok" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/menu_ok2"
            android:background="@color/grey_800" />

        <ImageButton
            android:id="@+id/menu_invert"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/view1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_invert_selection"
            android:scaleType="center"
            android:src="@drawable/ic_action_invert_selection" />

        <ImageButton
            android:id="@+id/menu_deselect"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/menu_invert"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_deselect"
            android:scaleType="center"
            android:src="@drawable/ic_action_deselect" />

        <ImageButton
            android:id="@+id/menu_select_all"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/menu_deselect"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_select_all"
            android:scaleType="center"
            android:src="@drawable/ic_action_select_all" />

        <ImageButton
            android:id="@+id/menu_sort2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/menu_select_all"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/sort"
            android:scaleType="center"
            android:src="@drawable/ic_action_sort" />

        <View
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/menu_cancel2"
            android:background="@color/grey_800" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="@color/grey_800" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/line"
        tools:listitem="@layout/fp__list_item" />

</RelativeLayout>